Fix z-index issue with overlapped section

--- a/src/scss/components/_overlappedSection.scss
+++ b/src/scss/components/_overlappedSection.scss
@@ -60,7 +60,8 @@
     }
 
     padding: $gutter / 2;
-
+    z-index: $zindex-sticky;
+    
     &-1 {
       @include media-breakpoint-up(md) {
         padding-bottom: 0;
